--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "animate.css";
 
 @theme {
   --shadow-3xl: 0 30px 30px -1px rgba(30, 45, 70, 0.05);
@@ -17,4 +18,8 @@
       transform: translateZ(0);
     }
   }
+}
+
+.animate__animated.animate__fadeInRight {
+  --animate-duration: 0.9s;
 }
