--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
-@import "animate.css";
 
 @theme {
   --shadow-3xl: 0 30px 30px -1px rgba(30, 45, 70, 0.05);
+  --shadow-4xl: 0 16px 32px rgba(0, 0, 0, 0.02), 0 8px 72px rgba(0, 0, 0, 0.08);
   --container-8xl: 1384px;
   --font-dana: "dana", tahoma;
   --font-dana--font-feature-settings: "ss02";
@@ -18,8 +18,4 @@
       transform: translateZ(0);
     }
   }
-}
-
-.animate__animated.animate__fadeInRight {
-  --animate-duration: 0.9s;
 }
