--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,4 @@
 @import "tailwindcss";
-@plugin '@tailwindcss/forms';
 
 @theme {
   --shadow-3xl: 0 30px 30px -1px rgba(30, 45, 70, 0.05);
@@ -19,4 +18,25 @@
       transform: translateZ(0);
     }
   }
+}
+.swiper-pagination-bullet {
+  @apply !opacity-100;
+}
+.lagom-red {
+  background: #fb2c36 !important;
+}
+.lagom-green {
+  background: #00c951 !important;
+}
+.lagom-blue {
+  background: #2b7fff !important;
+}
+.lagom-purple {
+  background: #ad46ff !important;
+}
+.lagom-orange {
+  background: #ff6900 !important;
+}
+.swiper-pagination-bullet-active {
+  @apply ring-blue-500 transition-all;
 }
