--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,9 @@
 .swiper-pagination-bullet-active {
   @apply ring-blue-500 transition-all;
 }
+.ext-slider .swiper-pagination-bullets .swiper-pagination-bullet {
+  @apply bg-transparent rounded-md border-2 border-zinc-600 size-3 transition-all;
+}
+.ext-slider .swiper-pagination-bullets .swiper-pagination-bullet-active {
+  @apply bg-blue-600 w-6 h-3 border-none;
+}
