--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,3 +46,101 @@
 .ext-slider .swiper-pagination-bullets .swiper-pagination-bullet-active {
   @apply bg-blue-600 w-6 h-3 border-none;
 }
+.background-gradient {
+  position: absolute;
+  top: 90%;
+  left: 40%;
+  width: 150vw;
+  height: 1000px;
+  transform: translate3d(-50%, -50%, 0px);
+  mask-image: radial-gradient(
+    farthest-side at 50% 50%,
+    rgba(0, 0, 0, 0.4),
+    rgba(0, 0, 0, 0)
+  );
+  background-image: linear-gradient(
+    90deg,
+    rgb(194, 207, 227),
+    rgba(148, 239, 183, 1)
+  );
+  filter: hue-rotate(0deg);
+}
+.background-gradient-pattern {
+  position: absolute;
+  inset: 0px;
+  background-image: url(/guilloche.svg);
+  background-position: right top;
+  background-size: 20px, 20px;
+  mix-blend-mode: overlay;
+}
+.main-animation-cms {
+  height: 70vh;
+  position: absolute;
+  right: 0;
+  top: 140px;
+  left: 50%;
+  transform: translateX(-50%);
+  min-width: 1920px;
+  width: 100%;
+}
+.main-animation-cms .main-animation-cms__container {
+  position: absolute;
+  top: -140px;
+  width: 50%;
+}
+.main-animation-cms .main-animation-cms__container--left {
+  left: 0;
+}
+.main-animation-cms .main-animation-cms__container--right {
+  right: 0;
+}
+.main-animation-cms .main-animation-cms__lines {
+  position: absolute;
+  left: 8px;
+  top: 245px;
+  z-index: -1;
+}
+.st0[data-v-3e30bb2e] {
+  opacity: 0.48;
+  fill: none;
+  stroke: #b7b7b7;
+  stroke-width: 1;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-miterlimit: 10;
+}
+.st1[data-v-3e30bb2e] {
+  opacity: 0.32;
+  fill: none;
+  stroke: #b7bdc9;
+  stroke-width: 1;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-miterlimit: 10;
+}
+.st2[data-v-3e30bb2e] {
+  fill: none;
+  stroke: #b7bdc9;
+  stroke-width: 1;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-miterlimit: 10;
+  opacity: 0.24;
+}
+.st3[data-v-3e30bb2e] {
+  opacity: 0.16;
+  fill: none;
+  stroke: #b7bdc9;
+  stroke-width: 1;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-miterlimit: 10;
+  transition: opacity 8s;
+  transition-timing-function: cubic-bezier(0.17, 0.67, 0.65, 1.05);
+}
+.main-animation-cms .main-animation-cms__lines {
+  position: absolute;
+  left: 8px;
+  top: 245px;
+  z-index: -1;
+}
