--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,3 +73,6 @@
   background-size: 20px, 20px;
   mix-blend-mode: overlay;
 }
+.graphics .swiper-wrapper {
+  transition-timing-function: linear;
+}
